# storage-shared-benchmarking

./: .boto  .boto-sliced-defaults  .boto-sliced-optimized  .cmake-format.py  .gcloudignore  .gitignore  CMakeLists.txt  README.md  adc.sh  gcloud.sh  go.work  go.work.sum  install.sh  run-all.sh  run-blog-benchmark.sh  run-go.sh  run-opt.sh  run.sh  scratch.sh  summarize.sh  temp-run-opt-gcloud-multi.sh  temp-run-opt-gsutil-defaults.sh  temp-run-opt-upload.sh  temp-trials-upload-gcloud.sh  temp-trials-upload-gsutil.sh  testgo.sh  trials.sh  vcpkg.json  workload_7_output.awk
.gcb/: README.md  cloudbuild.yaml
.gcb/infra/: .terraform.lock.hcl  backend.tf  main.tf
.gcb/infra/triggers/: main.tf
.github/: CODEOWNERS  renovate.json  sync-repo-settings.yaml
.github/workflows/: formatting.yaml  renovate_config_check.yaml  workload_7_awk_tests.yaml  workload_7_cloud_fn.yaml
bq_cli/: bq_cli.go  go.mod  go.sum
infra/: .terraform.lock.hcl  README.md  main.tf  variables.tf
unit_tests/: workload_7_output_awk_test.sh
unit_tests/examples/: expected_result_workload_7_example_output_1mib  expected_result_workload_7_example_output_8kib  workload_7_example_output_1mib  workload_7_example_output_8kib
w1r3/: README.md
w1r3/cpp/: .clang-format  .clang-tidy  CMakeLists.txt  Dockerfile  w1r3.cc
w1r3/go/: Dockerfile  go.mod  go.sum  main.go
w1r3/infra/: .terraform.lock.hcl  backend.tf  main.tf  variables.tf
w1r3/infra/dashboards/: main.tf
w1r3/infra/dashboards/dp_vs_json/: main.tf
w1r3/infra/dashboards/explorer/: main.tf
w1r3/infra/dashboards/ratios/: main.tf
w1r3/infra/dashboards/raw-histograms/: main.tf
w1r3/infra/metrics/: main.tf
w1r3/infra/mig/cpp/: main.tf
w1r3/infra/mig/go/: main.tf
w1r3/infra/mig/java/: main.tf
w1r3/infra/mig/service-account/: main.tf
w1r3/java/: Dockerfile  pom.xml
w1r3/java/src/main/java/: W1R3.java
w1r3/java/src/main/java/otel_support/: Otel.java
w1r3/java/src/main/java/runtime/: CpuTime.java  GcEvent.java  GcMonitor.java  Instrumentation.java  MemoryPoolUsage.java  MemoryPools.java  SetSize.java  SmapsRollup.java
w1r3/java/src/main/resources/: logback.xml  ssb.properties
w1r3/python/: requirements.txt  w1r3.py
workload_7_postprocess_fn/: README.md  deploy.sh  main.py  main_test.py  requirements.txt
